--- a/src/app/layout/default/side/side.component.html
+++ b/src/app/layout/default/side/side.component.html
@@ -2,14 +2,14 @@
   <ul nz-menu [nzMode]="'inline'" nzTheme="dark" [nzInlineCollapsed]="isCollapsed">
     <li nz-menu-item nz-tooltip nzPlacement="right" [nzTitle]="isCollapsed ? 'Navigation One' : ''">
       <span title>
-        <i nz-icon type="mail"></i>
-        <span>Navigation One</span>
+        <i nz-icon type="home"></i>
+        <span>首页</span>
       </span>
     </li>
     <li nz-submenu>
       <span title>
         <i nz-icon type="appstore"></i>
-        <span>Navigation Two</span>
+        <span>HTML</span>
       </span>
       <ul>
         <li nz-menu-item>Option 5</li>
@@ -26,7 +26,95 @@
     <li nz-submenu>
       <span title>
         <i nz-icon type="setting"></i>
-        <span>Navigation Three</span>
+        <span>JavaScript</span>
+      </span>
+      <ul>
+        <li nz-menu-item>Option 9</li>
+        <li nz-menu-item>Option 10</li>
+        <li nz-menu-item>Option 11</li>
+      </ul>
+    </li>
+    <li nz-submenu>
+      <span title>
+        <i nz-icon type="setting"></i>
+        <span>Css</span>
+      </span>
+      <ul>
+        <li nz-menu-item>Option 9</li>
+        <li nz-menu-item>Option 10</li>
+        <li nz-menu-item>Option 11</li>
+      </ul>
+    </li>
+    <li nz-submenu>
+      <span title>
+        <i nz-icon type="setting"></i>
+        <span>Angular</span>
+      </span>
+      <ul>
+        <li nz-menu-item>Option 9</li>
+        <li nz-menu-item>Option 10</li>
+        <li nz-menu-item>Option 11</li>
+      </ul>
+    </li>
+    <li nz-submenu>
+      <span title>
+        <i nz-icon type="setting"></i>
+        <span>Rxjs</span>
+      </span>
+      <ul>
+        <li nz-menu-item>Option 9</li>
+        <li nz-menu-item>Option 10</li>
+        <li nz-menu-item>Option 11</li>
+      </ul>
+    </li>
+    <li nz-submenu>
+      <span title>
+        <i nz-icon type="setting"></i>
+        <span>Ts</span>
+      </span>
+      <ul>
+        <li nz-menu-item>Option 9</li>
+        <li nz-menu-item>Option 10</li>
+        <li nz-menu-item>Option 11</li>
+      </ul>
+    </li>
+    <li nz-submenu>
+      <span title>
+        <i nz-icon type="setting"></i>
+        <span>Nodejs</span>
+      </span>
+      <ul>
+        <li nz-menu-item>Option 9</li>
+        <li nz-menu-item>Option 10</li>
+        <li nz-menu-item>Option 11</li>
+      </ul>
+    </li>
+    <li nz-submenu>
+      <span title>
+        <i nz-icon type="setting"></i>
+        <span>Webpack</span>
+      </span>
+      <ul>
+        <li nz-menu-item>Option 9</li>
+        <li nz-menu-item>Option 10</li>
+        <li nz-menu-item>Option 11</li>
+      </ul>
+    </li>
+    <li nz-submenu>
+      <span title>
+        <i nz-icon type="setting"></i>
+        <span>ES6</span>
+      </span>
+      <ul>
+        <li nz-menu-item>Option 9</li>
+        <li nz-menu-item>Option 10</li>
+        <li nz-menu-item>Option 11</li>
+      </ul>
+    </li>
+    <li nz-submenu>
+      <span title>
+        <i nz-icon type="setting"></i>
+        <span>Vue</span>
       </span>
       <ul>
         <li nz-menu-item>Option 9</li>
