--- a/src/app/routes/login/login.component.html
+++ b/src/app/routes/login/login.component.html
@@ -23,7 +23,7 @@
             <span>Remember me</span>
           </label>
           <a class="login-form-forgot" class="login-form-forgot">Forgot password</a>
-          <button nz-button class="login-form-button" [nzType]="'primary'">Log in</button>
+          <button nz-button class="login-form-button" [nzType]="'primary'" [nzLoading]="isLoadingOne">Log in</button>
         </nz-form-control>
       </nz-form-item>
     </form>
