--- a/src/app/layout/default/side/side.component.html
+++ b/src/app/layout/default/side/side.component.html
@@ -1,6 +1,6 @@
 <div style="width: 100%;">
   <ul nz-menu [nzMode]="'inline'" nzTheme="dark" [nzInlineCollapsed]="isCollapsed">
-    <li nz-menu-item nz-tooltip nzPlacement="right" [nzTitle]="isCollapsed ? 'Navigation One' : ''">
+    <li nz-menu-item nz-tooltip nzPlacement="right" [nzTitle]="isCollapsed ? '首页' : ''">
       <span title>
         <i nz-icon type="home"></i>
         <span>首页</span>
