--- a/src/assets/index.less
+++ b/src/assets/index.less
@@ -1,6 +1,12 @@
 .w-100{
-    width: 100%;
+    width: 100% !important;
 }
 .h-100{
-    height: 100%;
+    height: 100% !important;
+}
+.text-right {
+    text-align: right !important;
+}
+.p-20 {
+    padding: 20px;
 }
