--- a/src/app/layout/default/side/side.component.html
+++ b/src/app/layout/default/side/side.component.html
@@ -40,7 +40,7 @@
         <span>Css</span>
       </span>
       <ul>
-        <li nz-menu-item>Option 9</li>
+        <li nz-menu-item routerLink='/css/animation-basic' >动画小知识</li>
         <li nz-menu-item>Option 10</li>
         <li nz-menu-item>Option 11</li>
       </ul>
@@ -120,6 +120,15 @@
         <li nz-menu-item>Option 9</li>
         <li nz-menu-item>Option 10</li>
         <li nz-menu-item>Option 11</li>
+      </ul>
+    </li>
+    <li nz-submenu>
+      <span title>
+        <i nz-icon type="setting"></i>
+        <span>markdown</span>
+      </span>
+      <ul>
+        <li nz-menu-item routerLink='/markdown'>ngx-markdown</li>
       </ul>
     </li>
   </ul>
